fix: correct formatting and spacing in link styles for consistency

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,10 +63,14 @@
   }
 
   .primary-link {
-    @apply font-semibold text-white px-4 py-1.5 rounded-[2px] bg-primary-500/95 hover:bg-primary-600/95 transition-colors duration-300;
+    @apply  font-semibold text-white px-4 py-1.5 rounded-[2px] bg-primary-500/95 hover:bg-primary-600/95 transition-colors duration-300;
   }
 
   .secondary-link {
-    @apply border border-white rounded-[2px] px-4 py-1.5 text-white hover:bg-white hover:text-primary-500 transition-colors duration-300;
+    @apply  border border-white rounded-[2px] px-4 py-1.5 text-white hover:bg-white hover:text-primary-500 transition-colors duration-300;
+  }
+
+   .tertiary-link {
+    @apply  border border-primary-500 rounded-[2px] px-4 py-1.5 text-primary-500 hover:bg-primary-500 hover:text-white transition-colors duration-300;
   }
 }
